_assets/custom.css
:root {
    --timeRed:      hsla(0, 100%, 48%, 0.65);
    --timeOrange:   hsla(30, 100%, 48%, 0.84);
    --grey:         hsl(0, 0%, 25%);
    --header:       hsla(0, 0%, 48%, 0.7);
    --flag_black:   hsl(0, 0%, 0%);
    --flag_red:     hsl(0, 100%, 43.3%);
    --flag_gold:    hsl(48.5, 100%, 50%);
    --gap:          0.5vw;
    --bounce:       all 800ms cubic-bezier(1, -0.51, 0, 3.36);
}

@font-face {
    font-family: 'Square';
    src: url('../fonts/OrbitronVF.woff2');
    }

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    display: grid;
    grid-template-columns: 93vw 7vw;
    background: left top / cover url('../img/reunification.jpg') no-repeat;  
}

@media screen and (orientation: landscape) {
    body {
        background-image: url('../img/memorial.jpg');
    }
}  

.clock {
    display: grid;
    gap: var(--gap);
    padding: var(--gap);
    overflow: hidden;
}

.hx5,
.hx1,
.mx1 {
    display: grid;
    grid-template-columns: repeat(4, auto);
}

.mx5 {
    display: grid;
    grid-template-columns: repeat(11, auto);
}

.row {
    gap: var(--gap);
}

.unit {
    border-radius: .3vw;
    transition: var(--bounce);
}

.on {
    backdrop-filter: blur(4px);
    transition: var(--bounce);
}

.hx5 .unit.on,
.hx1 .unit.on {
    background-color: var(--timeRed); 
}

.mx5 .unit.on,
.mx1 .unit.on {
    background-color: var(--timeOrange);
}

.mx5 .unit:nth-child(3).on,
.mx5 .unit:nth-child(6).on,
.mx5 .unit:nth-child(9).on {
    background-color: var(--timeRed);
}

header {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100vh;
    overflow: hidden;
    /* background-color: var(--header); */
}

h1 {
    margin: 1vh 0 3vh;
    font-family: Square;
    font-size: clamp(18px, 3vw, 4vw);
    font-variation-settings: 'wght' 400;
    writing-mode: vertical-lr;
    color: var(--grey);
}

.flag-container {
    margin: 0vh 0 10vh;
}

    .flag {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 5vw;
        height: 8vh;
        font-family: Square;
        color: white;
        writing-mode: vertical-lr;
    }

    .flag.black { background-color: var(--flag_black) }

    .flag.red { background-color: var(--flag_red) }

    .flag.yellow { background-color: var(--flag_gold); color: var(--grey); }

.counter-container {
	margin: 1vh 0 3vh;
}
    .counter {
        width: 5vw;
        height: 5vw;
    }


@media all and (min-width: 10em) and (max-width: 40em) {
    body {
        grid-template-columns: 90vw 10vw;
    }

    .counter {
        width: 8vw;
        height: 8vw;
    }

    h1 {
        padding: 8px 2px 0 1vw;
    }
}

